# kaentake

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt  Custom.wz  action.cpp  avatar.cpp  battleship.cpp  bypass.cpp  constants.h  debug.cpp  debug.h  hook.cpp  hook.h  injector.cpp  inlink.cpp  itemeff.cpp  itemicon.cpp  launcher.cpp  launcher.manifest  launcher.rc  mobhptag.cpp  pch.h  resman.cpp  resolution.cpp  stringpool.cpp  system.cpp  tempstat.cpp  tooltip.cpp
src/wvs/: avatar.h  config.h  ctrlwnd.h  exception.h  field.h  gobj.h  iteminfo.h  msghandler.h  packet.h  rtti.h  secure.h  stage.h  statusbar.h  tempstat.h  tooltip.h  util.h  wnd.h  wndman.h  wvsapp.h
src/ztl/: tsingleton.h  zalloc.cpp  zalloc.h  zcoll.h  zcom.h  zlock.cpp  zlock.h  zstr.h  ztl.h
